--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   yaml: ^3.1.2
   fluttertoast: ^8.2.2
   shared_preferences: ^2.2.0
-  dio: ^5.2.1+1
+  dio: ^5.3.0
   package_info_plus: ^4.0.2
   crypto: ^3.0.3
   json_annotation: ^4.8.1
@@ -37,13 +37,14 @@ dependencies:
   file_picker: ^5.3.3
   csv: ^5.0.2
   permission_handler: ^10.4.3
+  build_runner: ^2.4.5
+  flutter_lints: ^2.0.0
+  json_serializable: ^6.7.0
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.5
-  flutter_lints: ^2.0.0
-  json_serializable: ^6.7.0
+  
 flutter:
 
   uses-material-design: true
