--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
-  flutter: "3.10.3"
+  flutter: "3.16.0"
 
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
   bloc: ^8.1.0
 
@@ -20,14 +22,14 @@ dependencies:
   flutter_bloc: ^8.1.0
   font_awesome_flutter: 10.4.0
   fl_chart: ^0.62.0
-  intl: ^0.18.1
+  intl: 0.18.1
   drag_and_drop_lists: ^0.3.3
   material_segmented_control: ^5.0.0
   http: ^1.0.0
   yaml: ^3.1.2
-  fluttertoast: ^8.2.2
+  fluttertoast: 8.2.2
   shared_preferences: ^2.2.0
-  dio: ^5.3.0
+  dio: 5.3.0
   package_info_plus: ^4.0.2
   crypto: ^3.0.3
   json_annotation: ^4.8.1
