--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.0
-  font_awesome_flutter: 10.4.0
-  fl_chart: ^0.62.0
+  fl_chart: 0.62.0
   intl: 0.18.1
   drag_and_drop_lists: ^0.3.3
   material_segmented_control: ^5.0.0
@@ -36,7 +35,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_easyloading: ^3.0.5
   excel: ^2.1.0
-  file_picker: ^5.3.3
+  file_picker: 6.1.1
   csv: ^5.0.2
   permission_handler: ^10.4.3
   build_runner: ^2.4.5
