--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   build_runner: ^2.4.5
   flutter_lints: ^2.0.0
   json_serializable: ^6.7.0
+  meta: ^1.10.0
   
 dev_dependencies:
   flutter_test:
