--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_lints: ^2.0.0
   json_serializable: ^6.7.0
   meta: ^1.10.0
+  path_provider: 2.1.2
   
 dev_dependencies:
   flutter_test:
@@ -50,7 +51,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
+  assets:
+      - assets/image/share_bg.png
 fonts:
   - family: SourceHanSerifCN
     fonts:
