--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,5 +15,6 @@ services:
         "--verbose",
         "--dart-define=config.server.network.host=${SERVER_HOST}",
         "--dart-define=config.server.network.port=${SERVER_PORT}",
+        "--dart-define=config.server.network.tls=${SERVER_TLS}",
         "--dart-define=config.server.signKey=${SERVER_SIGN_KEY}",
       ]
